[gd_scene load_steps=5 format=2]

[ext_resource path="res://Boss4.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/Boss/Level 4.png" type="Texture" id=2]
[ext_resource path="res://hpBarUnder.png" type="Texture" id=3]
[ext_resource path="res://hpBarTop.png" type="Texture" id=4]

[node name="Boss" type="Area2D"]
scale = Vector2( 0.5, 1 )
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="Bullets" type="Node" parent="."]

[node name="UI" type="Control" parent="."]
visible = false
margin_right = 483.0
margin_bottom = 160.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health" type="TextureProgress" parent="UI"]
anchor_right = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 25.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 4 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node" type="Node2D" parent="."]
position = Vector2( 118.697, 42.2915 )
scale = Vector2( 1.5, 0.75 )

[node name="Sprite" type="Sprite" parent="Node"]
position = Vector2( 100, 80 )
z_index = -1
texture = ExtResource( 2 )
vframes = 5
hframes = 4

[node name="Sprite2" type="Sprite" parent="Node"]
position = Vector2( 132, 80 )
z_index = -1
texture = ExtResource( 2 )
vframes = 5
hframes = 4
frame = 1

[node name="Sprite3" type="Sprite" parent="Node"]
position = Vector2( 196, 80 )
z_index = -1
texture = ExtResource( 2 )
vframes = 5
hframes = 4
frame = 3

[node name="Sprite4" type="Sprite" parent="Node"]
position = Vector2( 36, 112 )
z_index = -1
texture = ExtResource( 2 )
vframes = 5
hframes = 4
frame = 5

[node name="Sprite5" type="Sprite" parent="Node"]
position = Vector2( 68, 112 )
z_index = -1
texture = ExtResource( 2 )
vframes = 5
hframes = 4
frame = 6

[node name="Sprite6" type="Sprite" parent="Node"]
position = Vector2( 100, 112 )
z_index = -1
texture = ExtResource( 2 )
vframes = 5
hframes = 4
frame = 7

[node name="Sprite7" type="Sprite" parent="Node"]
position = Vector2( 132, 112 )
z_index = -1
texture = ExtResource( 2 )
vframes = 5
hframes = 4
frame = 8

[node name="Sprite8" type="Sprite" parent="Node"]
position = Vector2( 164, 112 )
z_index = -1
texture = ExtResource( 2 )
vframes = 5
hframes = 4
frame = 9

[node name="Sprite9" type="Sprite" parent="Node"]
position = Vector2( 196, 112 )
z_index = -1
texture = ExtResource( 2 )
vframes = 5
hframes = 4
frame = 10

[node name="Sprite10" type="Sprite" parent="Node"]
position = Vector2( 228, 112 )
z_index = -1
texture = ExtResource( 2 )
vframes = 5
hframes = 4
frame = 11

[node name="Sprite11" type="Sprite" parent="Node"]
position = Vector2( 36, 144 )
z_index = -1
texture = ExtResource( 2 )
vframes = 5
hframes = 4
frame = 12

[node name="Sprite12" type="Sprite" parent="Node"]
position = Vector2( 68, 144 )
z_index = -1
texture = ExtResource( 2 )
vframes = 5
hframes = 4
frame = 13

[node name="Sprite13" type="Sprite" parent="Node"]
position = Vector2( 100, 144 )
z_index = -1
texture = ExtResource( 2 )
vframes = 5
hframes = 4
frame = 14

[node name="Sprite14" type="Sprite" parent="Node"]
position = Vector2( 132, 144 )
z_index = -1
texture = ExtResource( 2 )
vframes = 5
hframes = 4
frame = 15

[node name="Sprite15" type="Sprite" parent="Node"]
position = Vector2( 164, 144 )
z_index = -1
texture = ExtResource( 2 )
vframes = 5
hframes = 4
frame = 16

[node name="Sprite16" type="Sprite" parent="Node"]
position = Vector2( 196, 144 )
z_index = -1
texture = ExtResource( 2 )
vframes = 5
hframes = 4
frame = 17

[node name="Sprite17" type="Sprite" parent="Node"]
position = Vector2( 228, 144 )
z_index = -1
texture = ExtResource( 2 )
vframes = 5
hframes = 4
frame = 18

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 119.631, 42.9925 )
scale = Vector2( 0.75, 0.75 )
polygon = PoolVector2Array( 204.759, 79.5466, 202.889, 88.1918, 190.272, 92.3976, 204.291, 108.286, 235.134, 128.848, 258.032, 132.352, 268.78, 123.474, 284.668, 107.819, 288.407, 92.8649, 279.061, 85.1543, 279.061, 79.5466, 246.816, 76.5091, 220.18, 84.687 )

[node name="AnimationTimer" type="Timer" parent="."]
wait_time = 0.2
[connection signal="area_entered" from="." to="." method="_on_Boss_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="AnimationTimer" to="." method="_on_AnimationTimer_timeout"]
